--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "react-dnd-html5-backend": "^2.2.4",
     "react-dom": "^15.4.2",
     "webpack": "^2.2.1"
+  },
+  "scripts": {
+    "build": "webpack && cp ./src/index.html ./target"
   }
 }
